[package]
name = "backend"
version = "0.1.0"
authors = ["belst <git@bel.st>"]

[dependencies]
actix = "0.5"
actix-web = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.5"
uuid = { version = "0.5", features = ["serde", "v4"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"
dotenv = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
failure = "0.1"
postgis = "0.6.0"
num_cpus = "1.0"
log = "0.4"

[dependencies.postgres]
version = "0.15"
features = ["with-chrono", "with-uuid"]
